[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Fonts/1980 portable.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/MenuScreen/MenuScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.560784, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxMenu" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 325.0
margin_bottom = 617.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxMenu"]
margin_right = 275.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "Q. l'as du volant
Feat.
Son joint"
align = 1

[node name="VBoxLevels" type="VBoxContainer" parent="MarginContainer/VBoxMenu"]
margin_top = 193.0
margin_right = 275.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 14
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CLevel1" type="HBoxContainer" parent="MarginContainer/VBoxMenu/VBoxLevels"]
margin_top = 42.0
margin_right = 275.0
margin_bottom = 99.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Button1" type="Button" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel1"]
margin_right = 100.0
margin_bottom = 57.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
theme = ExtResource( 1 )
text = "Level 1"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel1"]
margin_left = 120.0
margin_top = 15.0
margin_right = 205.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "Score :"

[node name="Score1" type="Label" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel1"]
margin_left = 225.0
margin_top = 15.0
margin_right = 275.0
margin_bottom = 42.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "0"
align = 2

[node name="CLevel2" type="HBoxContainer" parent="MarginContainer/VBoxMenu/VBoxLevels"]
margin_top = 113.0
margin_right = 275.0
margin_bottom = 170.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Button2" type="Button" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel2"]
margin_right = 100.0
margin_bottom = 57.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 1 )
text = "Level 2"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel2"]
margin_left = 120.0
margin_top = 15.0
margin_right = 205.0
margin_bottom = 42.0
theme = ExtResource( 1 )
text = "Score :"

[node name="Score2" type="Label" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel2"]
margin_left = 225.0
margin_top = 15.0
margin_right = 275.0
margin_bottom = 42.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "0"
align = 2

[node name="CLevel3" type="HBoxContainer" parent="MarginContainer/VBoxMenu/VBoxLevels"]
margin_top = 184.0
margin_right = 275.0
margin_bottom = 241.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Button3" type="Button" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel3"]
margin_right = 100.0
margin_bottom = 57.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 1 )
text = "Level 3"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel3"]
margin_left = 120.0
margin_top = 15.0
margin_right = 205.0
margin_bottom = 42.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Score :"

[node name="Score3" type="Label" parent="MarginContainer/VBoxMenu/VBoxLevels/CLevel3"]
margin_left = 225.0
margin_top = 15.0
margin_right = 275.0
margin_bottom = 42.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "0"
align = 2

[node name="Credits" type="Label" parent="MarginContainer/VBoxMenu"]
margin_top = 480.0
margin_right = 275.0
margin_bottom = 567.0
theme = ExtResource( 1 )
text = "Adrian Gaudebert
James Keohane
Mathieu Agopian"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxMenu/VBoxLevels/CLevel1/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxMenu/VBoxLevels/CLevel2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxMenu/VBoxLevels/CLevel3/Button3" to="." method="_on_Button3_pressed"]
